--- a/lab1.html
+++ b/lab1.html
@@ -6,7 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
     <link rel="stylesheet" href="css/materialize.min.css">
-    <link rel="stylesheet" href="lab1.css">
+    <link rel="stylesheet" href="css/lab1.css">
     <title>Laboratorio 1</title>
 </head>
 <body id="cuerpo" style="background-image: url();">
@@ -46,6 +46,6 @@
 <script src="js/jquery.js"></script>
 <script src="css/materialize.min.css"></script>
 <script src="maps.js"></script>
-<script src="lab1.js"></script>
+<script src="js/lab1.js"></script>
 
 </html>
